--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +29,11 @@
         <activity android:name=".activity.WebViewActivity" />
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.UserDataActivity" />
-        <activity android:name=".activity.CommonGoodsListActivity"></activity>
+        <activity android:name=".activity.CommonGoodsListActivity" />
+        <activity android:name=".activity.AdviceActivity" />
+        <activity android:name=".activity.HelpActivity" />
+        <activity android:name=".activity.MessageActivity" />
+        <activity android:name=".activity.JifenActivity"></activity>
     </application>
 
 </manifest>
