登录注册按钮更换
登录注册按钮更换

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.HelpActivity" />
         <activity android:name=".activity.MessageActivity" />
         <activity android:name=".activity.JifenActivity"></activity>
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
