意见反馈页面
意见反馈页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,9 @@
         <activity android:name=".activity.AdviceActivity" />
         <activity android:name=".activity.HelpActivity" />
         <activity android:name=".activity.MessageActivity" />
-        <activity android:name=".activity.JifenActivity"></activity>
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.JifenActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.ShopAddressActivity"></activity>
     </application>
 
 </manifest>
